--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "repos/nconf"]
 	path = repos/nconf
 	url = https://github.com/Cat5TV/nconf
+[submodule "repos/rpi-mkimg"]
+	path = repos/rpi-mkimg
+	url = https://github.com/Cat5TV/rpi-mkimg
