--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "repos/rpi-mkimg"]
 	path = repos/rpi-mkimg
 	url = https://github.com/Cat5TV/rpi-mkimg
+[submodule "repos/nems-tools"]
+	path = repos/nems-tools
+	url = https://github.com/Cat5TV/nems-tools
