--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "repos/nems-tools"]
 	path = repos/nems-tools
 	url = https://github.com/Cat5TV/nems-tools
+[submodule "repos/nems-wmic"]
+	path = repos/nems-wmic
+	url = https://github.com/Cat5TV/nems-wmic
