--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,27 @@
 [submodule "repos/nems-docs"]
 	path = repos/nems-docs
 	url = https://github.com/Cat5TV/nems-docs
+[submodule "repos/nems-plugins"]
+	path = repos/nems-plugins
+	url = https://github.com/NEMSLinux/nems-plugins
+[submodule "repos/hw-detect"]
+	path = repos/hw-detect
+	url = https://github.com/NEMSLinux/hw-detect
+[submodule "repos/temper"]
+	path = repos/temper
+	url = https://github.com/NEMSLinux/temper
+[submodule "repos/nems-migrator-data"]
+	path = repos/nems-migrator-data
+	url = https://github.com/NEMSLinux/nems-migrator-data
+[submodule "repos/nems-saas-probe"]
+	path = repos/nems-saas-probe
+	url = https://github.com/NEMSLinux/nems-saas-probe
+[submodule "repos/wmic"]
+	path = repos/wmic
+	url = https://github.com/NEMSLinux/wmic
+[submodule "repos/nems-tv"]
+	path = repos/nems-tv
+	url = https://github.com/NEMSLinux/nems-tv
+[submodule "repos/9590"]
+	path = repos/9590
+	url = https://github.com/NEMSLinux/9590
