Fix nems-migrator changelogs

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,9 +4,6 @@
 [submodule "repos/nems-admin"]
 	path = repos/nems-admin
 	url = https://github.com/Cat5TV/nems-admin
-[submodule "repos/nems-migrator"]
-	path = repos/nems-migrator
-	url = https://github.com/Cat5TV/nems-migrator
 [submodule "repos/nems-www"]
 	path = repos/nems-www
 	url = https://github.com/Cat5TV/nems-www
@@ -52,3 +49,6 @@
 [submodule "repos/nems-commits"]
 	path = repos/nems-commits
 	url = https://github.com/NEMSLinux/nems-commits
+[submodule "repos/nems-migrator"]
+	path = repos/nems-migrator
+	url = https://github.com/NEMSLinux/nems-migrator.git
